todo list and small fixes in the file

--- a/ncl22-revised.tex
+++ b/ncl22-revised.tex
@@ -117,7 +117,7 @@ Niccol{\`o} Veltri \qquad\qquad Cheng-Syuan Wan
 It is a well-known fact from the late 80s/early 90s that symmetric monoidal closed categories are standard categorical models of \MILL, multiplicative intuitionistic linear logic, whose logical connectives comprise of multiplicative unit $\I$ and conjunction $\ot$ and linear implication $\lolli$ \cite{mellies:categorical:09}. Probably lesser-known, though a quite straightforward generalization of the previous sentence (which actually predated the inception of linear logic altogether), is the fact that (not necessarily symmetric) monoidal biclosed categories are categorical models of the non-commutative variant of \MILL\ (for which we use the abbreviation \NMILL) \cite{abrusci:noncommutative:1990}, where the structural rule of exchange is absent and there are two ordered implications $\lolli$ and $\illol$ \cite{lambek:deductive:68}. The sequent calculus for \NMILL\ is known as \emph{Lambek calculus}. Lambek refers to the implications $\lolli$ and $\illol$ as residuals, and models of Lambek calculus are therefore also called residual categories. The Lambek calculus is often practically employed in formal investigations of natural languages \cite{lambek:mathematics:58}.
 By dropping one of the ordered implications of \NMILL\ one obtains a fragment of the Lambek calculus enjoying categorical semantics in every monoidal closed category.
 
-In recent years, Ross Street introduced the new notion of (left) skew monoidal closed categories \cite{street:skew-closed:2013}. These are a weakening of monoidal closed categories: their structure includes a unit $I$, a tensor $\ot$, an internal hom $\lolli$ and an adjunction relating the latter two operations, as in usual non-skew monoidal closed categories. The difference lies in the three structural laws of left and right unitality, $\lambda_A : \I \ot A \to A$ and $\rho_A : A \to A \ot \I$, and associativity, $\alpha_{A,B,C} : (A \ot B) \ot C \to A \ot (B \ot C)$, which are usually required to be natural isomorphisms, but in the skew variant are merely natural transformations with the specified orientation. Street originally proposed this weaker notion to reach better understanding of and to fix a famous imbalance, first noticed by Eilenberg and Kelly \cite{eilenberg:closed:1966}, present in the adjunction relating monoidal and closed structures \cite{street:skew-closed:2013,uustalu:eilenberg-kelly:2020}. In the last decade, skew monoidal closed categories, together with their non-closed/non-monoidal variants, have been thoroughly studied, with applications ranging from algebra and homotopy theory to programming language semantics \cite{szlachanyi:skew-monoidal:2012,lack:skew:2012,lack:triangulations:2014,altenkirch:monads:2014,buckley:catalan:2015,bourke:skew:2017,bourke:skew:2018,tomita:realizability:21}.
+In recent years, Ross Street introduced the new notion of (left) skew monoidal closed categories \cite{street:skew-closed:2013}. These are a weakening of monoidal closed categories: their structure includes a unit $\I$, a tensor $\ot$, an internal hom $\lolli$ and an adjunction relating the latter two operations, as in usual non-skew monoidal closed categories. The difference lies in the three structural laws of left and right unitality, $\lambda_A : \I \ot A \to A$ and $\rho_A : A \to A \ot \I$, and associativity, $\alpha_{A,B,C} : (A \ot B) \ot C \to A \ot (B \ot C)$, which are usually required to be natural isomorphisms, but in the skew variant are merely natural transformations with the specified orientation. Street originally proposed this weaker notion to reach better understanding of and to fix a famous imbalance, first noticed by Eilenberg and Kelly \cite{eilenberg:closed:1966}, present in the adjunction relating monoidal and closed structures \cite{street:skew-closed:2013,uustalu:eilenberg-kelly:2020}. In the last decade, skew monoidal closed categories, together with their non-closed/non-monoidal variants, have been thoroughly studied, with applications ranging from algebra and homotopy theory to programming language semantics \cite{szlachanyi:skew-monoidal:2012,lack:skew:2012,lack:triangulations:2014,altenkirch:monads:2014,buckley:catalan:2015,bourke:skew:2017,bourke:skew:2018,tomita:realizability:21}.
 
 A question arises naturally: is it possible to characterize skew monoidal closed categories as standard categorical models of a certain logical proof system, e.g. a skew variant of \NMILL?
 This paper provides a positive answer to this question. We introduce a cut-free sequent calculus for a skew variant of \NMILL, which we name \SkNMILL. Sequents are peculiarly defined as triples $S \mid \Gamma \vdash A$, where the succedent is a single formula $A$ (as in intuitionistic linear logic), but the antecedent is divided in two parts: an optional formula $S$, called \emph{stoup} \cite{girard:constructive:91}, and an ordered list of formulae $\Gamma$. Inference rules are similar to the ones of \NMILL\ but with specific structural restrictions for accurately capturing the structural laws of skew monoidal closed categories, and nothing more. In particular, and in analogy with \NMILL, the structural rules of contraction, weakening and exchange are all absent. Sets of derivations are quotiented by a congruence relation $\circeq$, carefully crafted to serve as the sequent-calculus counterpart of the equational theory of skew monoidal closed categories. The design of the sequent calculus draws inspiration from, and further advance, the line of work of Uustalu, Veltri and Zeilberger on proof systems for various categories with skew structure: skew semigroup (a.k.a. Tamari order) \cite{zeilberger:semiassociative:19}, skew monoidal (non-closed) \cite{uustalu:sequent:2021,uustalu:proof:nodate} and its symmetric variant \cite{veltri:coherence:2021}, skew prounital (non-monoidal) closed \cite{uustalu:deductive:nodate}.
@@ -607,7 +607,7 @@ $(\mathbb{C},\I,\otd,\lollid)$  is a ``genuine'' skew monoidal closed category, 
 The formulae, derivations and the equivalence relation $\circeq$ of the sequent calculus for \SkNMILL\ determine a skew monoidal closed category $\FSkMCC(\mathsf{At}$).
 \begin{defn}\label{def:fskmcc}
   The skew monoidal closed category $\FSkMCC(\mathsf{At})$ has
-  objects given formulae, in particular the operations $I$, $\ot$ and $\lolli$ are the logical connectives. The set of maps between formulae $A$ and $B$ is the set of derivations $A \mid ~ \vdash B$ quotiented by the equivalence relation $\circeq$. The identity map is the equivalence class of $\ax$, while composition is given by $\mathsf{scut}$. Derivations for the structural laws $\lambda$, $\rho$,$\alpha$ are given in (\ref{eq:lra}). All the equations of skew monoidal closed categories hold up to $\circeq$.
+  as objects formulae, in particular the operations $\I$, $\ot$ and $\lolli$ are the logical connectives. The set of maps between formulae $A$ and $B$ is the set of derivations $A \mid ~ \vdash B$ quotiented by the equivalence relation $\circeq$. The identity map is the equivalence class of $\ax$, while composition is given by $\mathsf{scut}$. Derivations for the structural laws $\lambda$, $\rho$,$\alpha$ are given in (\ref{eq:lra}). All the equations of skew monoidal closed categories hold up to $\circeq$.
 \end{defn}
 
 Skew monoidal closed categories correspond precisely to categorical models of \SkNMILL, in the sense specified by the following theorem.
@@ -637,7 +637,7 @@ Skew monoidal closed categories correspond precisely to categorical models of \S
 %      F_{\mathsf{At}} (B) \lolli' F_{\mathsf{At}} (C) &\text{if } A = B \lolli C
 %    \end{cases}
   \end{equation*}
-  The encoding of antecedents as formulae $\ldbc S \mid \Gamma \rdbc_{\ot}$, introduced immediately after (\ref{eq:inter:ante}), can be replicated also in $\mathbb{C}$ by simply replacing $\ot$ with $\ot'$ in the definition, where now $S$ is an optional object and $\Gamma$ is a list of objects of $\mathbb{C}$. Using this encoding, it is possible to show that each rule in (\ref{eq:seqcalc}) is derivable in $\mathbb{C}$. As an illustrative case, consider the rule $\pass$. Assume given a map $f : \ldbc A \mid \Gamma \rdbc_{\ot'} \to C$ in $\mathbb{C}$. Then, assuming $\Gamma = A_1,\dots,A_n$, we can define the passivation of $f$ as
+  The encoding of antecedents as formulae $\ldbc S \mid \Gamma \rdbc_{\ot}$, introduced immediately after (\ref{eq:inter:ante}), can be replicated also in $\mathbb{C}$ by simply replacing $\ot$ with $\ot'$ in the definition, where now $S$ is an optional object and $\Gamma$ is a list of objects of $\mathbb{C}$. Using this encoding, it is possible to show that each rule in (\ref{eq:seqcalc}) is derivable in $\mathbb{C}$. As an illustrative case, consider the rule $\pass$. Assume given a map $f : \ldbc A \mid \Gamma \rdbc_{\ot'} \to C$ in $\mathbb{C}$. Then, assuming $\Gamma = A_1,\dots,A_n$, we can define the passivation of $f$ typed $\ldbc {-} \mid A, \Gamma \rdbc_{\ot'} \to C$ as 
 \[\xymatrixcolsep{7pc}
 \xymatrix{
   (\dots ((\I \ot' A_1) \ot' A_2) \dots ) \ot' A_n
@@ -961,7 +961,7 @@ Dually, prioritizing the application of $\tr$ over $\lleft$ leads to similar iss
 %It seems can eliminate non-determinacy but a new problem occurs.
 %Some provable sequents in \SkNMILL \text{ } become non-provable in focused system.
 %
-%For example, consider seqeunt $X \lolli Y \mid Z \vdash_{\RI} (X \lolli Y) \ot Z$ when we favor $\lleft$ than $\tr$.
+%For example, consider sequent $X \lolli Y \mid Z \vdash_{\RI} (X \lolli Y) \ot Z$ when we favor $\lleft$ than $\tr$.
 %\begin{displaymath}
 %  \infer[\mathsf{sw}]{X \lolli Y \mid Z \vdash_{\RI} (X \lolli Y) \ot Z}{
 %    \infer[\lleft]{X \lolli Y \mid Z \vdash_{\F} (X \lolli Y) \ot Z}{
@@ -1351,7 +1351,7 @@ We expect a similar modular behaviour to show up in the case of partially normal
 We are also planning to develop an extension of \SkNMILL\ with an exponential modality $!$. This in turns requires the study of linear exponential comonads on skew monoidal closed categories, extending the work of Hasegawa \cite{hasegawa:linear:2017}. Modalities for exchange \cite{jiang:lambek:2019} and associativity/unitality will also be considered.
 
 \paragraph{Acknowledgements} N.V.\ and T.U.\ were supported by the
-Estonian Research Council grants no.~PSG659 and PRG1210, N.V.\ and
+Estonian Research Council grants no.~PSG659, PSG749 and PRG1210, N.V.\ and
 C.-S.W.\ by the ESF funded Estonian IT Academy research measure
 (project 2014-2020.4.05.19-0001). T.U.\ was supported by the Icelandic
 Research Fund grant no.~196323-053.
