an updated version of bibs in ncl22-revised.bib with some typos corrected plus minor fixes

--- a/ncl22-revised.tex
+++ b/ncl22-revised.tex
@@ -1459,5 +1459,5 @@ C.-S.W.\ by the ESF funded Estonian IT Academy research measure
 Research Fund grant no.~196323-053.
 
   \bibliographystyle{eptcs}
-  \bibliography{docRefs}
+  \bibliography{ncl22-revised}
 \end{document}
